src/objects/Success_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Success Plans</relationshipLabel>
        <relationshipName>Success_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Action_Plan__c</fullName>
        <label>Action Plan</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_of_Customer_days__c</fullName>
        <label>Age of Customer (# days)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approx_of_AEs__c</fullName>
        <label>Approx # of AEs</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approx_of_SDR_BDR__c</fullName>
        <label>Approx # of SDR/BDR</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Groups_Using_Node__c</fullName>
        <label>Business Groups Using Node</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Data</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Sales_Segments__c</fullName>
        <label>Customer Sales Segments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small/Medium</fullName>
                </value>
                <value>
                    <fullName>Mid Market</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>No Specialization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Executive_Contact1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor - 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Success Plans</relationshipLabel>
        <relationshipName>Success_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Sponsor - 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Success Plans (Executive Sponsor - 2)</relationshipLabel>
        <relationshipName>Success_Plans2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor_Governance_Status__c</fullName>
        <label>Executive Sponsor/Governance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Set</fullName>
                </value>
                <value>
                    <fullName>Emerging - but in good shape</fullName>
                </value>
                <value>
                    <fullName>Needs Work</fullName>
                </value>
                <value>
                    <fullName>Bad Shape - please help</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_Tech_Stack__c</fullName>
        <label>Existing Tech Stack</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthScore__c</fullName>
        <label>Success Plan Health Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_are_Territories_Assigned__c</fullName>
        <label>How are Territories Assigned?</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Risk_Category__c</fullName>
        <label>Key Risk Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management/Relationship</fullName>
                </value>
                <value>
                    <fullName>Adoption/Value</fullName>
                </value>
                <value>
                    <fullName>Economic</fullName>
                </value>
                <value>
                    <fullName>Onboarding Issue</fullName>
                </value>
                <value>
                    <fullName>Merger and Acquisition</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Self Inflicted (e.g. No training)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Review_Date__c</fullName>
        <label>Last Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <label>NPS Score (post 45 days)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Next_NPS_Survey_Date__c</fullName>
        <label>Next NPS Survey Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Review_Date__c</fullName>
        <label>Next Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Success_Definitions_and_Measures__c</fullName>
        <label>Other Success Definitions and Measures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Account_Risk__c</fullName>
        <label>Overall Account Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Business_Goals__c</fullName>
        <label>Primary Business Goals</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Risk_Notes__c</fullName>
        <label>Risk Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Ops Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Success Plans (Admin Contact)</relationshipLabel>
        <relationshipName>Success_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Support_Level__c</fullName>
        <label>Support Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Of_Interest__c</fullName>
        <label>Tech Of Interest</label>
        <type>TextArea</type>
    </fields>
    <label>Success Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Success_Plans</fullName>
        <columns>Account__c</columns>
        <columns>NAME</columns>
        <columns>Action_Plan__c</columns>
        <columns>Overall_Account_Risk__c</columns>
        <columns>Risk_Notes__c</columns>
        <columns>Next_Review_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>Success Plans</label>
    </listViews>
    <nameField>
        <label>Success Plan ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Success Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>